<resources>
    <string name="app_name">Vinilos</string>
    <string name="rol_collector">COLECCIONISTA</string>
    <string name="rol_visitor">VISITANTE</string>
    <string name="collectors">COLECCIONISTAS</string>
    <string name="prizes">PREMIOS</string>
    <string name="albums">ÁLBUMES</string>
    <string name="artists">ARTISTAS</string>
    <string name="MainMenu">PRINCIPAL</string>
    <string name="CreatePrizes">CREAR PREMIO</string>
    <string name="CreateAlbums">CREAR ÁLBUM</string>
...
