<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CollectorFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragments_rvcollector"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintTop_toBottomOf="@+id/test"
        app:navGraph="@navigation/nav_collector"
        tools:listitem="@layout/collector_item" />

</FrameLayout>